--- a/frontend/src/app/login/login/login.page.scss
+++ b/frontend/src/app/login/login/login.page.scss
@@ -16,6 +16,11 @@ ion-item {
   --background: #ffffff;
   width: 281px;
 }
+#password {
+  margin-top:-45px !important;
+}
+
+
 .signup {
   height: 70vh;
 }
