--- a/frontend/src/app/referral/referral.page.html
+++ b/frontend/src/app/referral/referral.page.html
@@ -10,7 +10,7 @@
     <ion-card>  
       <ion-card-content>
         <p class="text-center text-white">
-          Get up to N50 on your next transaction by inviting your friends to use Zappy using your referral link below.
+          Get up to  &#x20a6;500 in your referral wallet on a first transaction of your referral by inviting your friends to use Zappy using your referral link below.
         </p>
       </ion-card-content>
     </ion-card>
