--- a/frontend/src/global.scss
+++ b/frontend/src/global.scss
@@ -30,3 +30,7 @@ $primary: '#9ACD32'; //#182848
 $primary-light: '#ff00ff'; //003679
 $secondary: '#DDAB14';
 $white: '#ffffff';
+
+.my-alert{
+    --color:#9ACD32;
+}
