--- a/frontend/android/app/src/main/res/xml/config.xml
+++ b/frontend/android/app/src/main/res/xml/config.xml
@@ -6,6 +6,10 @@
     <param name="android-package" value="com.verso.cordova.clipboard.Clipboard"/>
   </feature>
 
+  <feature name="Fingerprint">
+    <param name="android-package" value="de.niklasmerz.cordova.biometric.Fingerprint"/>
+  </feature>
+
   <feature name="IonicDeeplinkPlugin">
     <param name="android-package" value="io.ionic.links.IonicDeeplink"/>
     <param name="onload" value="true"/>
