--- a/frontend/src/app/dashboard/dashboard/dashboard.page.scss
+++ b/frontend/src/app/dashboard/dashboard/dashboard.page.scss
@@ -1,7 +1,7 @@
 ion-card {
   text-align: center;
-  margin: 10px auto auto 0px !important;
-  width: 299px !important;
+  margin: 5px auto auto 0px !important;
+  width: 412px !important;
 }
 h6 {
    width: 72px !important;
@@ -31,17 +31,17 @@ ion-buttons {
   }
 }
 .box-md {
-  margin: 10px !important;
+ // margin: 10px !important;
 }
 
 .container{
-  padding: 20px 30px 0px 30px !important;
-  margin: 0 auto;
-  position: relative;
+ padding: 20px 30px 0px 30px !important;
+ margin: 0 auto;
+ position: relative;
 
 }
 .container-bg {
-  margin-top: 155px;
+  margin-top: 100px;
   z-index: 1;
   background: lighten($color: #003679, $amount: 75);
     ion-buttons {
@@ -59,10 +59,11 @@ ion-grid {
 .title {
    padding: 0px !important;
 }
+
 @media screen and (min-width: 320px) and (max-width: 414px) {
   
   .container {
-    padding: 20px 0px 0px 0px !important;
+  //  padding: 20px 0px 0px 0px !important;
     
     .box-sm, .box-md {
     //  margin: 0px !important;
@@ -71,6 +72,7 @@ ion-grid {
 
   }
 }
+
 
 ion-row {
   color: #9ACD32 !important;
@@ -144,4 +146,9 @@ ion-icon {
 }
 .list{
   margin-top:-14px;
+}
+.text {
+  color:#ffffff;
+  font-weight:600;
+  font-size:12px;
 }
