--- a/frontend/src/app/login/login/login.page.html
+++ b/frontend/src/app/login/login/login.page.html
@@ -25,7 +25,7 @@
                  maxlength="13">
       </ion-input>
     </ion-item>
-    <ion-item>
+    <ion-item id="password">
       <ion-icon name="lock-closed-outline"></ion-icon>&nbsp;&nbsp;
       <ion-input ion-input type="password" [(ngModel)]="loginData.password"  name="password" placeholder="Password"></ion-input>
     </ion-item>
@@ -38,7 +38,7 @@
         Forgot password
       </label>
       <span>
-        <img src="../../assets/icon/thumbprint_icon.svg" alt="" (click)="login()">
+        <img src="../../assets/icon/thumbprint_icon.svg" alt="" (click)="loginWithFingerprint()">
       </span>
   </div>
 </ion-content>
