--- a/frontend/src/app/profile/user-upgrade/user-upgrade.page.scss
+++ b/frontend/src/app/profile/user-upgrade/user-upgrade.page.scss
@@ -45,7 +45,7 @@ ion-content {
     line-height: 20px;
     background: linear-gradient(#056608, #9ACD32);  // DDAB14
     //margin: 10px 0px;
-    //margin-top: 140px;
+    margin-top: 200px;
     margin-left:30px;
     align-items:center;
   }  
