--- a/frontend/src/app/add-money/add-money/add-money.page.html
+++ b/frontend/src/app/add-money/add-money/add-money.page.html
@@ -33,7 +33,7 @@
     <div class="inner">      
       <h4>Add money</h4>
       <ion-item lines="none">
-        <ion-input placeholder="Amount" type="text" [(ngModel)] = "fund_amount" required></ion-input>
+        <ion-input placeholder="Amount" inputmode="numeric" [(ngModel)] = "fund_amount" required></ion-input>
       </ion-item>
   
       <!--ion-item lines="none">
