--- a/frontend/src/app/dashboard/dashboard/dashboard.page.scss
+++ b/frontend/src/app/dashboard/dashboard/dashboard.page.scss
@@ -147,8 +147,12 @@ ion-icon {
 .list{
   margin-top:-14px;
 }
-.text {
+#text {
   color:#ffffff;
   font-weight:600;
   font-size:12px;
+}
+#service{
+  font-size: 12px;
+  font-weight:600;
 }
