--- a/frontend/src/app/login/login/login.page.html
+++ b/frontend/src/app/login/login/login.page.html
@@ -25,7 +25,7 @@
                  maxlength="13">
       </ion-input>
     </ion-item>
-    <ion-item id="password">
+    <ion-item id="">
       <ion-icon name="lock-closed-outline"></ion-icon>&nbsp;&nbsp;
       <ion-input ion-input type="password" [(ngModel)]="loginData.password"  name="password" placeholder="Password"></ion-input>
     </ion-item>
