--- a/frontend/src/app/profile/user-upgrade/user-upgrade.page.scss
+++ b/frontend/src/app/profile/user-upgrade/user-upgrade.page.scss
@@ -14,7 +14,20 @@ ion-content {
   .agent {
     background:#DDAB14;
   }
-
+  ion-badge{
+    margin-left:250px;
+    margin-top: -30px;
+    height:20px;
+    width:250px;
+    font-size: 10px;
+  }
+  .ion-badge-agent{
+    margin-left:250px;
+    margin-top: -30px;
+    height:20px;
+    width:50px;
+    font-size: 10px;
+  }
   
 
 
