--- a/frontend/src/app/profile/user-upgrade/user-upgrade.page.html
+++ b/frontend/src/app/profile/user-upgrade/user-upgrade.page.html
@@ -16,9 +16,12 @@
     </ion-item> 
   </div>
 -->
-  <ion-card class="ion-card casual">  
+  <ion-card class="ion-card" [ngStyle]="{'background-color':role_id == 1 ? '#9ACD32' : '#DDAB14' }">  
     <ion-card-content>
-      <h2>Casual</h2>
+      <ion-row>
+        <h2>Casual</h2>
+        <ion-badge [ngStyle]="{'background-color':role_id == 1 ? '#DDAB14' : '#9ACD32' }">Level 1</ion-badge>
+      </ion-row>
       <label>Daily Transaction Limit</label>
       <p class="text-white">
         &#x20A6;50,000
@@ -29,9 +32,12 @@
       </p>
     </ion-card-content>
   </ion-card>
-  <ion-card class="ion-card agent">  
+  <ion-card class="ion-card" [ngStyle]="{'background-color':role_id == 2 ? '#9ACD32' : '#DDAB14' }">  
     <ion-card-content>
-      <h2>Agent</h2>
+      <ion-row>
+        <h2>Paypoint Agent</h2>
+        <ion-badge class="ion-badge-agent" [ngStyle]="{'background-color':role_id == 1 ? '#9ACD32' : '#DDAB14' }">Level 2</ion-badge>
+      </ion-row>  
       <label>Daily Transaction Limit</label>
       <p class="text-white">
         No limit
@@ -42,6 +48,9 @@
       </p>
     </ion-card-content>
   </ion-card>
+  <ion-refresher (ionRefresh)="doRefresh($event)" slot="fixed" pullFactor="1" pullMin="50" pullMax="200">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
 <!--
   <ion-card class="ion-card">  
     <ion-card-content>
